--- a/week3/w3-NonRWDBASIC.html
+++ b/week3/w3-NonRWDBASIC.html
@@ -3,7 +3,7 @@
 <body>
 <p><b>To understand this example, you should open this page on a phone or a tablet.</b></p>
 
-<img src="assets/img_chania.jpg" alt="Chania" width="460" height="345">
+<img src="images/img_chania.jpg" alt="Chania" width="460" height="345">
 
 <p>
 Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
